--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 DECIMAL: <input id="ciphertext-dec" class="input" type="text"> <br>
                 HEXADECIMAL: <input id="ciphertext-hex" class="input" type="text">
             </h1>
+            <button class="button" onclick="encrypt()">ENCRYPT</button>
         </div>
     </section>
     <section class="first-section">
@@ -38,7 +39,7 @@
             <h1 class="title">
                 PLAINTEXT(Binary): <input id="dec-plaintext" class="input" type="text">
             </h1>
-            <button class="button" onclick="encrypt()">ENCRYPT</button>
+            <button class="button" onclick="decrypt()">DENCRYPT</button>
         </div>
     </section>
 </body>
